test/tests/errors/error-file-rewrite-wrong-arg-count.sm
// true
// false
// false
/**/
/**/

program{
    file f withbuffer bf: int;
    rewrite(f, bf);
}